[package]
name = "snowflake"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
serde = { optional = true, version = "1", default-features = false }
itoa = { optional = true, version = "1" }
rkyv = { optional = true, version = "0.8.0-rc.1", default-features = false, features = ["bytecheck"] }
schemars = { optional = true, version = "0.8" }
timestamp = { optional = true, version = "0.3.0-beta.1", package = "iso8601-timestamp", default-features = false }
rusqlite = { optional = true, version = "0.32", default-features = false }
postgres-types = { optional = true, version = "0.2", default-features = false }
bytes = { optional = true, version = "1", default-features = false }

[dev-dependencies]
rkyv = { version = "0.8.0-rc.1" }
serde_json = "1"
serde_derive = "1"

[features]
std = []
generator = ["std"]
pg = ["postgres-types", "bytes", "std"]
default = ["itoa", "serde", "generator"]
